Class for correct spacing when h2 immediately follows h1.

--- a/app/_scss/_custom.scss
+++ b/app/_scss/_custom.scss
@@ -184,6 +184,9 @@ div.main-content {
   border-bottom: 1px solid #eee;
   padding-bottom: 10px;
 
+  .leading-header {
+    margin-top: 0px;
+  }
   .h4 {
     margin-top: 20px;
   }
